--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "verilog/rtl/audio_synthesizer"]
 	path = verilog/rtl/audio_synthesizer
-	url = https://github.com/Purdue-SoCET/AudioSynthesizer.git
+	url = git@github.com:Purdue-SoCET/AudioSynthesizer.git
