--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "verilog/rtl/intro_2_stopwatch"]
 	path = verilog/rtl/intro_2_stopwatch
-	url = https://github.com/Purdue-SoCET/intro-2-stopwatch
+	url = git@github.com:Purdue-SoCET/intro-2-stopwatch.git
